# cppMathboyFunk

./: CMakeLists.txt  README.md  ScrapPaper.cpp
include/clandesitne/: algo.hpp  core.hpp  crypto.hpp  linear.hpp  primes.hpp  stats.hpp  tcg.hpp  util.hpp
src/: algo.cpp  core.cpp  crypto.cpp  linear.cpp  primes.cpp  stats.cpp  tcg.cpp  util.cpp
tests/: test_core.cpp
